# adk-samples

./: .gitignore  my_thoughts.md  parsed_paper.txt  pyproject.toml  test_agent_run.py  test_litellm.py
RAG/: README.md  pyproject.toml
RAG/notebooks/: analyze-data.ipynb  load-data.ipynb
RAG/rag_agent/: agent.py  prompts.py  tools.py
academic_research/: LlmRequest.txt
academic_research/acedemic_research/: __init__.py  agent.py  prompt.py
academic_research/acedemic_research/sub_agents/academic_newresearch/: agent.py  prompt.py
academic_research/acedemic_research/sub_agents/academic_websearch/: agent.py  prompt.py
academic_research/local_acedemic_research/: README.md  agent.py
academic_research/local_acedemic_research/sub_agents/academic_newresearch/: __init__.py  agent.py
academic_research/local_acedemic_research/sub_agents/academic_websearch/: __init__.py  agent.py
acedemic_research/acedemic_research/: __init__.py  agent.py
acedemic_research/acedemic_research/sub_agents/academic_newresearch/: agent.py
acedemic_research/acedemic_research/sub_agents/academic_websearch/: agent.py
blogger_writer/: README.md
blogger_writer/blogger_agent/: agent.py  agent_utils.py  config.py  tools.py  tracing.py
blogger_writer/blogger_agent/sub_agents/: blog_editor.py  blog_planner.py  blog_writer.py  social_media_writer.py
coder_agent/: pyproject.toml
coder_agent/coder_agent/: agent.py
coder_agent/coder_agent/unsafe_agent/: agent.py
coder_agent/coder_agent/w_tools_agent/: agent.py
coder_agent/unsafe_agent/: agent.py  evalset17d8cd.evalset.json
coder_agent/w_tools_agent/: agent.py  tools.py
currency_agent/: README.md  pyproject.toml
currency_agent/a2a_client/: test_client.py
currency_agent/currency_agent/: agent.py
deep_search/backend/: README.md  run.sh
deep_search/backend/app/: __main__.py  agent.py  callbacks.py  config.py  prompts.py  schema.py  trace.py
deep_search/backend/searxng_mcp/: server.py
deep_search/frontend/: run.sh
deep_search/frontend/src/: App.tsx
deep_search/frontend/src/api/: services.ts
deep_search/frontend/src/components/: BackendLoadingScreen.tsx
deep_search/frontend/src/hooks/: useBackendHealth.ts  useChat.ts
deep_search/frontend/src/types/: index.ts
deep_search/frontend/src/utils/: apiHelpers.ts  sseParser.ts
financial_advisor/: pyproject.toml
financial_advisor/financial_advisor/sub_agents/risk_analyst/: agent.py
financial_advisor/financial_advisor/sub_agents/trading_analyst/: agent.py
financial_advisor/local_financial_advisor/: __init__.py  agent.py
financial_advisor/local_financial_advisor/sub_agents/data_analyst/: agent.py  prompt.py  tools.py
financial_advisor/local_financial_advisor/sub_agents/execution_analyst/: agent.py
financial_advisor/local_financial_advisor/sub_agents/risk_analyst/: agent.py
financial_advisor/local_financial_advisor/sub_agents/trading_analyst/: agent.py
searxng_search/: README.md  pyproject.toml
searxng_search/searxng_mcp/: server.py
searxng_search/searxng_mcp/notebooks/: test_server.ipynb
searxng_search/searxng_search_agent/: agent.py
