[project]
name = "adk-samples"
version = "0.1.0"
description = "ADK Samples"
authors = [         
    { name = "Dan Higgins", email = "dphiggins@gmail.com" },
]
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "arize-phoenix>=12.25.1",
    "chromadb>=0.4.21",
    "ddgs>=9.10.0",
    "fastapi>=0.127.0",
    "google-adk[a2a,eval]>=1.13.0",
    "greenlet[all]>=3.2.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.0",
    "litellm>=1.80.10",
    "mcp[cli]>=1.13.0",
    "openinference-instrumentation>=0.1.42",
    "openinference-instrumentation-google-adk>=0.1.8",
    "pypdf>=6.4.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.40.0",
    "docker>=6.1.3",
    "pydantic>=2.1.1",
    "typing-extensions>=4.8.0",
]

