[project]
name = "currency-agent"
version = "0.1.0"
description = "Currency conversion agent using ADK, MCP and A2A"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk[a2a]==1.13.0",
    "google-genai>=1.17.0",
    "python-dotenv>=1.1.0",
    "fastmcp==2.11.3",
    "litellm>=1.80.10",
]

[tool.agent-starter-pack.settings]
deployment_targets = ["agent_engine", "cloud_run"]
